--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Timer App</title>
-        <link rel="stylesheet" href="styles/style.css">
-        <script src="js/timer.js"></script>
+        <link rel="stylesheet" href="/assets/styles/style.css">
+        <script src="/assets/js/timer.js"></script>
     </head>
     <body>
         <div id="timer">
@@ -39,6 +39,4 @@
 
         </div>
     </body>
-</div>
-
 </html>
