--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Timer App</title>
         <link rel="stylesheet" href="/assets/styles/style.css">
-        <script src="/assets/js/timer.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="assets/images/timer.svg">
+        <script src="/js/timer.js"></script>
     </head>
     <body>
         <div id="timer">
