Add timer animation

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     </head>
     <body>
         <div id="timer">
+            <div id="timer-background"></div> 
             <div id="timer-inner">
-                <div id="timer-value" class="text"> 
+                <span id="timer-value" class="text"> 
                     60
-                </div>
-                <div id="timer-unit" class="text">
+                </span>
+                <span id="timer-unit" class="text">
                     Sekunden
-                </div>          
+                </span>         
             </div>
 
             <div id="timer-info">
